logs/purpletag.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/purpletag'...
Compiling './lib/python3.5/site-packages/purpletag/data.py'...
***   File "./lib/python3.5/site-packages/purpletag/data.py", line 29
    print 'fetching legislator Twitter handles from GovTrack...'
                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/purpletag/purpletag_collect.py'...
***   File "./lib/python3.5/site-packages/purpletag/purpletag_collect.py", line 34
    print 'tracking', len(ids), 'users'
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/purpletag/purpletag_parse.py'...
***   File "./lib/python3.5/site-packages/purpletag/purpletag_parse.py", line 70
    print 'parsing', json_f
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/purpletag/purpletag_score.py'...
***   File "./lib/python3.5/site-packages/purpletag/purpletag_score.py", line 127
    print "can't find any legislators in %s" % tag_file
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/purpletag/purpletag_serve.py'...
***   File "./lib/python3.5/site-packages/purpletag/purpletag_serve.py", line 46
    print result
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/purpletag/web'...
Listing './lib/python3.5/site-packages/purpletag-0.1.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
